--- a/style.css
+++ b/style.css
@@ -205,3 +205,59 @@ footer, .github {
     text-underline-offset: 4px;
     cursor: pointer;
 }
+
+.head {
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px dotted rgb(208, 208, 208);
+    height: 50px;
+}
+
+.element {
+    margin: 35px 0px;
+    padding: 10px 7px;
+}
+
+.element:hover {
+    background-color: rgb(41, 41, 41);
+    cursor: pointer;
+    text-decoration: underline rgb(166, 166, 166) dotted 1px;
+    text-underline-offset: 2px;
+}
+
+/*Mobile Phones*/
+@media only screen and (max-width: 800px) {
+
+    .container {
+        width: 96%;
+    }
+
+    .contents {
+        width: 90%;
+    }
+    
+    .content {
+        font-size: 12px;
+    }
+    
+    .line, .code {
+        font-size: 11px;
+    }
+
+    .content {
+        margin-top: 70px;
+    }
+
+    .code {
+        margin-left: 10px;
+        margin-right: 10px;
+        flex-wrap: nowrap;
+    }
+
+    .rich-title {
+        margin-top: -50px;
+        margin-bottom: 40px;
+    }
+
+}
